--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   url_launcher: ^6.3.0
   confetti: ^0.7.0
   share_plus: ^10.0.2
+  audioplayers: ^6.1.0
+  get: ^4.6.6
+  animated_introduction: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +80,8 @@ flutter:
     - assets/lottie/
     - assets/Icons/
     - assets/Images/
+    - assets/audio/
+    - assets/onboard/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
